[package]
name = "ethgas_commit_boost_modules"
version = "1.0.1"
rust-version = "1.83"
edition = "2021"

[dependencies]
commit-boost = { git = "https://github.com/Commit-Boost/commit-boost-client", version = "0.9.2" }

# ethereum
alloy = { version = "1.1.0", features = [
  "full",
  "rpc-types-beacon",
  "serde",
  "signer-keystore",
  "ssz",
  "getrandom",
  "providers",
  "signer-ledger",
  "eip712",
] }
eth-keystore = { git = "https://github.com/p2p-org/eth-keystore-rs.git", version = "0.6.0", features = [
  "v4",
], default-features = false }

# networking
axum = { version = "0.8.1", features = ["macros"] }
reqwest = { version = "0.12.0", features = ["json", "stream"] }

# async / threads
tokio = { version = "1.37.0", features = ["full"] }
tokio-retry = "0.3"

# serialization
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
ethereum_ssz_derive = "0.8"

# telemetry
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
prometheus = "0.14.0"

# crypto
blst = "0.3.15"
tree_hash = "0.9"
tree_hash_derive = "0.9"

# misc
js-sys = "0.3.72"
color-eyre = "0.6.3"
eyre = "0.6.12"
rand = { version = "0.9", features = ["os_rng"] }
indexmap = "2.2.6"
lazy_static = "1.5.0"
rust_decimal = "1.37"
chrono = "0.4.40"
cookie = "0.18"

[lib]
name = "ethgas_commit"
path = "src/lib.rs"

[[bin]]
name = "gen_jwt"
path = "bin/gen_jwt.rs"

[[bin]]
name = "ethgas_commit"
path = "bin/ethgas_commit.rs"

[[bin]]
name = "ethgas_deposit"
path = "bin/ethgas_deposit.rs"

[patch.crates-io]
blstrs_plus = { git = "https://github.com/Commit-Boost/blstrs" }
